Fix tesseract not being found on Fedora

Now it tries to match any library called "tesseract"

See https://doc.qt.io/qt-6/qlibrary.html#details for how this should work.

BUG: 516162
FIXED-IN: 6.6.1